src/test/ui/generic-associated-types/issue-92033.stderr
error[E0478]: lifetime bound not satisfied
  --> $DIR/issue-92033.rs:22:28
   |
LL | /     type TextureIter<'a>: Iterator<Item = &'a Texture>
LL | |     where
LL | |         Self: 'a;
   | |_________________- definition of `TextureIter` from trait
...
LL |       type TextureIter<'a> = std::option::IntoIter<&'a Texture>;
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^- help: try copying this clause from the trait: `where Self: 'a`
   |
note: lifetime parameter instantiated with the lifetime `'s` as defined here
  --> $DIR/issue-92033.rs:21:6
   |
LL | impl<'s> Surface for &'s Texture {
   |      ^^
note: but lifetime parameter must outlive the lifetime `'a` as defined here
  --> $DIR/issue-92033.rs:22:22
   |
LL |     type TextureIter<'a> = std::option::IntoIter<&'a Texture>;
   |                      ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0478`.
